--- a/trunk/modules/catalog/views/scripts/index/show/contact.phtml
+++ b/trunk/modules/catalog/views/scripts/index/show/contact.phtml
@@ -3,7 +3,7 @@
 	<dt>Pokaż numer telefonu</dt>
 	<dd>
 		<p class="phoneNr">Numer telefonu: <b><?php print $this->escape($this->catalogRow->phone)?></b></p>
-		<p>Wspomnij o <a href="http://www.stomatolodzy.krakow.pl" title="Stomatolog, Kraków">stomatolodzy.krakow.pl</a> kiedy będziesz dzwonić</p>
+		<p>Wspomnij o <em>stomatolodzy.krakow.pl</em> kiedy będziesz dzwonić - pomożesz tworzyć tę stronę!</p>
 	</dd>
 	<?php else: ?>
 	<dt>Telefon nie został podany!</dt>
