--- a/trunk/modules/catalog/views/scripts/index/show.phtml
+++ b/trunk/modules/catalog/views/scripts/index/show.phtml
@@ -46,10 +46,10 @@
 <!-- panel -->
 <div class="span-8 last">	
 	<!-- GMaps -->
-	<p id="gmap-js" class="msg-info">Nie można wyświetlić mapy. Twoja przeglądarka nie ma włączonej obsługi języka JavaScript!</p>
-	<p id="gmap-compatible" class="msg-info none">Nie można wyświetlić mapy. Przeglądarka nie jest kompatybilna z Google Maps!</p>
-	<div id="gmap-container" class="border none">
-		<div id="gmap"></div>
+	<div id="gmap-container" class="border">
+		<p id="gmap-js" class="msg-info">Nie można wyświetlić mapy. Twoja przeglądarka nie ma włączonej obsługi języka JavaScript!</p>
+		<p id="gmap-compatible" class="msg-info none">Nie można wyświetlić mapy. Przeglądarka nie jest kompatybilna z Google Maps!</p>
+		<div id="gmap" />
 	</div>
 	
 	<div id="image-list">
