--- a/trunk/modules/catalog/views/scripts/index/show.phtml
+++ b/trunk/modules/catalog/views/scripts/index/show.phtml
@@ -49,7 +49,7 @@
 	<div id="gmap-container" class="border">
 		<p id="gmap-js" class="msg-info">Nie można wyświetlić mapy. Twoja przeglądarka nie ma włączonej obsługi języka JavaScript!</p>
 		<p id="gmap-compatible" class="msg-info none">Nie można wyświetlić mapy. Przeglądarka nie jest kompatybilna z Google Maps!</p>
-		<div id="gmap" />
+		<div id="gmap"></div>
 	</div>
 	
 	<div id="image-list">
