--- a/trunk/modules/catalog/views/scripts/index/show/description.phtml
+++ b/trunk/modules/catalog/views/scripts/index/show/description.phtml
@@ -15,11 +15,11 @@
 </div>
 
 <?php if ($more !== null):?>
-<div class="description-more hide">
+<div class="description-more">
 	<?php print nl2br($more);?>
 </div>
 
-<p class="description-showmore action">Pokaż więcej</p>
+<p class="description-showmore action none">Pokaż więcej</p>
 <?php endif;?>
 
 <?php endif;?>
