--- a/trunk/modules/catalog/views/scripts/dataGridBody.phtml
+++ b/trunk/modules/catalog/views/scripts/dataGridBody.phtml
@@ -1,3 +1,6 @@
+<?php if(!count($this->rowset)):?>
+<p class="msg-info">Niestety, nie znaleziono żadnych gabinetów</p>
+<?php else:?>
 <?php foreach ($this->rowset as $k => $row):?>
 <?php $data = current($row)->getData();?>
 <div class="catalog border <?php
@@ -33,3 +36,4 @@
 	<?php endif;?>
 </div>
 <?php endforeach;?>
+<?php endif; ?>
