--- a/trunk/modules/catalog/views/scripts/dataGridSearch.phtml
+++ b/trunk/modules/catalog/views/scripts/dataGridSearch.phtml
@@ -1,5 +1,5 @@
 <div id="catalog-rowset">
-	<?php print $this->partial('dataGridBody.phtml', $this);?>
+	<?php print $this->partial('dataGridBodySearch.phtml', $this);?>
 </div>
 
 <div class="pagination">
