--- a/trunk/modules/catalog/views/scripts/management/staff.phtml
+++ b/trunk/modules/catalog/views/scripts/management/staff.phtml
@@ -1,46 +1,43 @@
 <?php print $this->form?>
-	
+
 <?php if (!count($this->rowset)):?>
 <p class="msg-info">Nie został dodany personel</p>
 <?php else:?>
 
 <table>
-	<col width="*%" />
-	<col width="150" />
-	<col width="100" />
-	<thead>
-		<tr>
-			<th colspan="3">Miniaturka</th>
-		</tr>
-	</thead>
-	<tbody>
-		<?php foreach($this->rowset as $row):?>
-		<tr>
-			<td><img src="<?php print "upload/catalog/image/logo/{$row->image}"; ?>" /></td>
-			<td>
-				<?php if ($row->id == $this->row->catalog_image_id):?>
-				<a class="action image-main">Logo główne</a>
-				<?php else:?>
-				<a class="action image-nomain" href="<?php print $this->url(array(
-					'module'=>'catalog',
-					'controller'=>'management',
-					'action'=>'imagemain',
-					'id' => $row->id
-				),'default', true)?>">Ustaw na logo</a>
-				<?php endif;?>
-			</td>
-			<td>
-				<a  class="action delete"
-					onclick="return confirm('Czy usunąć fotografie?');"
-					href="<?php print $this->url(array(
-				'module'=>'catalog',
-				'controller'=>'management',
-				'action'=>'imagedelete',
-				'id' => $row->id,
-			),'default', true)?>">Usuń</a>
-			</td>
-		</tr>
-		<?php endforeach;?>
-	</tbody>
+    <col width="120" />
+    <col width="*%" />
+    <col width="150" />
+    <col width="100" />
+    <thead>
+        <tr>
+            <th>Miniaturka</th>
+            <th colspan="3">Imię i nazwisko</th>
+        </tr>
+    </thead>
+    <tbody>
+        <?php foreach($this->rowset as $row):?>
+        <tr>
+            <td><img src="<?php print "upload/catalog/staff/logo/{$row->image}"; ?>" /></td>
+            <td>
+                <a class="action edit" href="<?php print $this->url(array(
+                   'action'=>'staffupdate',
+                   'staff_id' => $row->id))?>"><?php print $row->fullname?></a>
+            </td>
+            <td>
+                <a class="action edit" href="<?php print $this->url(array(
+                   'action'=>'staffupdate',
+                   'staff_id' => $row->id))?>">Edytuj</a>
+            </td>
+            <td>
+                <a  class="action delete"
+                    onclick="return confirm('Czy usunąć osobe?');"
+                    href="<?php print $this->url(array(
+                    'action'=>'staffdelete',
+                    'staff_id' => $row->id))?>">Usuń</a>
+            </td>
+        </tr>
+        <?php endforeach;?>
+    </tbody>
 </table>
 <?php endif;?>
