--- a/modules/admin/views/scripts/index/index.phtml
+++ b/modules/admin/views/scripts/index/index.phtml
@@ -59,6 +59,10 @@
 		<p><a class="action big group" href="<?php print $this->url(array('module' => 'group', 'controller' => 'admin', 'action' => 'index'),'default',true); ?>">Grupy</a></p>
 		<p>Grupy użytkowników</p>
 	</div>
+        <div class="span-4 last">
+		<p><a class="action big stats" href="<?php print $this->url(array('module' => 'advertising', 'controller' => 'admin', 'action' => 'index'),'default',true); ?>">Reklama</a></p>
+		<p>Reklamodawcy, miejsca reklamowe</p>
+	</div>
 </div>
 
 
