--- a/modules/catalog/views/scripts/index/show/staff.phtml
+++ b/modules/catalog/views/scripts/index/show/staff.phtml
@@ -11,7 +11,7 @@
         <dl class="info">
             <dt>Imię i nazwisko</dt>
             <dd><h4><?php print $staff->fullname?></h4></dd>
-            <dt>Opis</dt>
+            <dt>Dane personalne</dt>
             <dd><div class="description">
                 <?php if (!empty($staff->description)):?>
                 <?php print $staff->description; ?>
